# housingplanner

./: .gitignore  Cargo.toml  DEPENDENCIES_LICENSE  README.md  SECURITY.md  build.rs
.githooks/: pre-commit
.github/workflows/: check-translations.yml  check-versions.yml  flatpak.yml  master.yml  release.yml  snapcraft.yml  update_licenses.yml  windows.yml
assets/: housingplanner.desktop
flatpak/: cargo-sources.json  flatpak.json
scripts/: check_translations.py
snap/: snapcraft.yaml
snap/gui/: housingplanner.desktop
src/: app.rs  i18n.rs  journal.rs  lib.rs  licenses.rs  main.rs  model.rs  timeline.rs
